<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="500dp"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/j1" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/popup_sneaker_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_sneaker_name"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        android:layout_marginLeft="20dp"
        style="@style/TitleTextstyle"/>

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toTopOf="@+id/popup_sneaker_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.425" />

    <TextView
        android:id="@+id/popup_sneaker_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/popup_sneaker_description_title"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        style="@style/TitleTextstyle"/>

    <TextView
        android:id="@+id/popup_sneaker_description_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_sneaker_description_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_sneaker_description_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_sneaker_description_title"
        style="@style/DefaultTextStyle"/>

    <TextView
        android:id="@+id/popup_sneaker_commercialisation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_sneaker_commercialisation_title"
        app:layout_constraintStart_toStartOf="@+id/popup_sneaker_description_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/popup_sneaker_description_subtitle"
        style="@style/TitleTextstyle"
        android:layout_marginTop="@dimen/default_margin"/>

    <TextView
        android:id="@+id/popup_sneaker_commercialisation_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_sneaker_commercialisation_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_sneaker_commercialisation_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_sneaker_commercialisation_title"
        style="@style/DefaultTextStyle"/>

    <TextView
        android:id="@+id/popup_sneaker_colorie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_sneaker_colorie_title"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@+id/popup_sneaker_commercialisation_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/popup_sneaker_commercialisation_subtitle"
        style="@style/TitleTextstyle"/>

    <TextView
        android:id="@+id/popup_sneaker_colorie_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_sneaker_colorie_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_sneaker_colorie_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_sneaker_colorie_title"
        style="@style/DefaultTextStyle"/>

    <View
        android:id="@+id/view_separation"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_sneaker_colorie_subtitle" />

    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_trash"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintEnd_toStartOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />

    <ImageView
        android:id="@+id/star_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_unstar"
        android:layout_marginLeft="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintStart_toEndOf="@+id/delete_button"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />

</androidx.constraintlayout.widget.ConstraintLayout>